css/main.css
/* ... */
[color-scheme="light"] {
  --base: var(--base--light);
  --base-tint: var(--base-tint--light);
  --base-shade: var(--base-shade--light);
  --accent: var(--accent--light);
  --secondary: var(--secondary--light);
  --secondary-rgba: var(--secondary-rgba--light);
  --stroke-controls: var(--stroke-controls--light);
  --stroke-controls-neutral: var(--stroke-controls-neutral--light);
  --stroke-elements: var(--stroke-elements--light);
  --t-bright: var(--t-bright--light);
  --t-medium: var(--t-medium--light);
  --t-muted: var(--t-muted--light);
  --t-accent: var(--t-accent--light);
  --t-secondary: var(--t-secondary--light);
  --t-disabled: var(--t-disabled--light);
  --t-placeholder: var(--t-placeholder--light);
  --base-opp: var(--base-opp--light);
  --t-opp-bright: var(--t-opp-bright--light);
  --t-opp-medium: var(--t-opp-medium--light);
  --t-opp-muted: var(--t-opp-muted--light);
  --gradient-one: var(--gradient-one--light);
  --gradient-two: var(--gradient-two--light);
  --gradient-three: var(--gradient-three--light);
}

[color-scheme="dark"] {
  --base: var(--base--dark);
  --base-tint: var(--base-tint--dark);
  --base-shade: var(--base-shade--dark);
  --accent: var(--accent--dark);
  --secondary: var(--secondary--dark);
  --secondary-rgba: var(--secondary-rgba--dark);
  --stroke-controls: var(--stroke-controls--dark);
  --stroke-controls-neutral: var(--stroke-controls-neutral--dark);
  --stroke-elements: var(--stroke-elements--dark);
  --t-bright: var(--t-bright--dark);
  --t-medium: var(--t-medium--dark);
  --t-muted: var(--t-muted--dark);
  --t-accent: var(--t-accent--dark);
  --t-secondary: var(--t-secondary--dark);
  --t-disabled: var(--t-disabled--dark);
  --t-placeholder: var(--t-placeholder--dark);
  --base-opp: var(--base-opp--dark);
  --t-opp-bright: var(--t-opp-bright--dark);
  --t-opp-medium: var(--t-opp-medium--dark);
  --t-opp-muted: var(--t-opp-muted--dark);
  --gradient-one: var(--gradient-one--dark);
  --gradient-two: var(--gradient-two--dark);
  --gradient-three: var(--gradient-three--dark);
}

/* ------------------------------------------------*/
/* Variables End */
/* ------------------------------------------------*/
/* ------------------------------------------------*/
/* Basic Styles Start */
/* ------------------------------------------------*/
*,
*::before,
*::after {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

button:active,
button:focus {
  outline: none !important;
}

button::-moz-focus-inner {
  border: 0 !important;
}

input::-moz-focus-inner {
  border: 0 !important;
}

a:focus,
button:focus,
input:focus,
textarea:focus {
  -webkit-tap-highlight-color: transparent;
}

input,
textarea,
button,
select,
a {
  -webkit-tap-highlight-color: transparent;
}

::-moz-selection {
  background-color: var(--secondary-rgba);
  color: var(--t-bright);
  text-shadow: none;
}

::selection {
  background-color: var(--secondary-rgba);
  color: var(--t-bright);
  text-shadow: none;
}

::-webkit-scrollbar {
  display: none;
  width: 5px;
  background: var(--base-shade);
}
@media only screen and (min-width: 768px) {
  ::-webkit-scrollbar {
    display: block;
  }
}

::-webkit-scrollbar-track {
  background-color: var(--base-shade);
}

::-webkit-scrollbar-thumb {
  background-color: var(--secondary);
  background: -webkit-gradient(
    linear,
    left top,
    left bottom,
    from(var(--accent)),
    to(var(--secondary))
  );
  background: linear-gradient(
    to bottom,
    var(--accent) 0%,
    var(--secondary) 100%
  );
  border-radius: 10px;
}

html {
  width: 100%;
  height: 100%;
  font-family: sans-serif;
  font-size: 62.5%;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  position: relative;
  width: 100%;
  min-width: 360px;
  overflow-x: unset !important;
  font: normal 400 var(--_size) / 1.4 var(--_font-default);
  text-rendering: optimizeLegibility;
  background-color: var(--base);
  color: var(--t-medium);
}

section {
  position: relative;
  width: 100%;
}

a {
  text-decoration: none;
  outline: 0;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  -webkit-transition: all var(--_animspeed-medium) var(--_animbezier);
  -moz-transition: all var(--_animspeed-medium) var(--_animbezier);
  transition: all var(--_animspeed-medium) var(--_animbezier);
}

img {
  display: block;
  width: 100%;
  height: auto;
}

.overflow-hidden {
  overflow: hidden !important;
}

.components {
  position: relative;
}

.components__item {
  position: relative;
  padding: 4rem 10%;
  border-bottom: 1px solid var(--stroke-elements);
}

.components__caption {
  display: block;
  font: normal 400 -moz-calc(var(--_size) * 0.938) / 1 var(--_font-default);
  font: normal 400 calc(var(--_size) * 0.938) / 1 var(--_font-default);
  color: var(--t-muted);
  margin-bottom: 2rem;
}

/* ------------------------------------------------*/
/* Basic Styles End */
/* ------------------------------------------------*/
/* ------------------------------------------------*/
/* Animations - Backgrounds Start */
/* ------------------------------------------------*/
.gradient-background {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  overflow: hidden;
}

.blur {
  position: absolute;
  z-index: 1;
  -moz-border-radius: 900px;
  border-radius: 900px;
  -webkit-filter: blur(clamp(40px, 7vw, 90px));
  filter: blur(clamp(40px, 7vw, 90px));
}
.blur:nth-of-type(1) {
  background: var(--gradient-one);
  height: clamp(400px, 20vw, 60vw);
  width: -moz-calc(clamp(400px, 30vw, 70vw) * 1.1);
  width: calc(clamp(400px, 30vw, 70vw) * 1.1);
  top: -10vh;
  right: -5vw;
}
.blur:nth-of-type(2) {
  background: var(--gradient-two);
  height: clamp(300px, 16vw, 46vw);
  width: -moz-calc(clamp(300px, 16vw, 56vw) * 0.75);
  width: calc(clamp(300px, 16vw, 56vw) * 0.75);
  top: 5vh;
  right: 0vw;
}
/* ... */

